# moleditpy_cif_viewer

./: .gitignore  ALGORITHMS.md  README.md  dummy.cif  pyproject.toml  run_tests.py  test_all.py
.github/workflows/: release.yml  test.yml
cif_viewer/: __init__.py  parser.py  rdkit_bridge.py  viewer.py  viewer_xrd.py
tests/: conftest.py  test_init_coverage.py  test_misc_coverage.py  test_parser.py  test_parser_coverage.py  test_plugin_integration.py  test_pymatgen_parser.py  test_viewer_coverage.py  test_viewer_xrd_coverage.py
